# music-box

./: .gitattributes  CMakeLists.txt  FindArduino.cmake  archive-listing.txt  bits.h  configure  cpplint.cmake  generic-avr-gcc.cmake  main.cpp  melody.h  player.cpp  player.h  ports.h  scheduler.cpp  scheduler.h  timer.cpp  timer.h
java-tools/src/: MidiParse.java  MusicPlay.java
melody-generator/: .eslintrc.yml  generate.js
